[gd_scene load_steps=6 format=2]

[ext_resource path="res://StartScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/UI/titlescreen.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/CREDITS.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/READ.png" type="Texture" id=4]
[ext_resource path="res://sprites/UI/Creditsnowall.png" type="Texture" id=5]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 602.0
texture = ExtResource( 2 )
expand = true

[node name="CREDITS" type="TextureButton" parent="."]
margin_left = 574.247
margin_top = 520.595
margin_right = 830.247
margin_bottom = 648.595
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )

[node name="READ" type="TextureButton" parent="."]
margin_left = 309.317
margin_top = 522.543
margin_right = 565.317
margin_bottom = 650.543
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )

[node name="Credits" type="Popup" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="CreditsRect" type="TextureButton" parent="Credits"]
margin_left = -7.79199
margin_top = 13.6362
margin_right = 1156.21
margin_bottom = 979.636
rect_scale = Vector2( 0.9, 0.6 )
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="CREDITS" to="." method="_on_CREDITS_pressed"]
[connection signal="pressed" from="READ" to="." method="_on_READ_pressed"]
[connection signal="pressed" from="Credits/CreditsRect" to="." method="_on_CreditsRect_pressed"]
